# misis2024s-23-02-pishugin-d-s

./: CMakeLists.txt  README.md  StackArr.cpp  StackArr.h  codeforces.id  misis2024.sln  misis2024.vcxproj  misis2024.vcxproj.filters  status.md
prj.app/RoboCrawler/: CMakeLists.txt
prj.codeforces/: 0546a.cpp
prj.cw/: 3d_engine_main.cpp  CMakeLists.txt  readme.md
prj.cw/3D_Engine/: 3d_engine.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/Stack/: CMakeLists.txt  StackArr.cpp  StackArr.hpp
prj.lab/StackArr/: CMakeLists.txt  StackArr.cpp  StackArr.h
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/robocrawl/: CMakeLists.txt  robocrawl.cpp  robocrawl.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.h
prj.test/: CMakeLists.txt  stack_arr_test.cpp  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queue_arr.cpp  test_queue_lst.cpp  test_rational.cpp  test_robocrawl.cpp  test_stack_lst.cpp
